--- a/templates/base.html
+++ b/templates/base.html
@@ -76,5 +76,6 @@
         // Base JavaScript functionality
     </script>
     {% block extra_js %}{% endblock %}
+    {% block scripts %}{% endblock %}
 </body>
 </html> 
